force-app/main/default/objects/Loan_Application__c/Loan_Application__c.object-meta.xml
<CustomObject>
    <label>Loan Application</label>
    <nameField>
        <displayFormat>LA-{0000}</displayFormat>
        <label>Loan Application No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Applications</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>