force-app/main/default/objects/Loan_Application__c/fields/Application_Type__c.field-meta.xml
<CustomField>
    <fullName>Application_Type__c</fullName>
    <label>Application Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Used</fullName>
            </value>
            <value>
                <fullName>New/Used</fullName>
            </value>
            <value>
                <fullName>Refinance</fullName>
                <isActive>false</isActive>
                <label>Refinance</label>
            </value>
            <value>
                <fullName>Repurchase</fullName>
                <isActive>false</isActive>
                <label>Repurchase</label>
            </value>
            <value>
                <fullName>Topup</fullName>
                <isActive>false</isActive>
                <label>Topup</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>