force-app/main/default/objects/Loan_Application__c/fields/BL_Campaign_Type__c.field-meta.xml
<CustomField>
    <fullName>BL_Campaign_Type__c</fullName>
    <formula>TEXT( Lead__r.Campaign_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Type</label>
    <type>Text</type>
</CustomField>