force-app/main/default/objects/Loan_Application__c/fields/BL_Cancellation_Reasons__c.field-meta.xml
<CustomField>
    <fullName>BL_Cancellation_Reasons__c</fullName>
    <label>Cancellation Reasons</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>BL_Cancellation_Source__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Post PD Query not Resolved</fullName>
            </value>
            <value>
                <fullName>Duplicate Record</fullName>
            </value>
            <value>
                <fullName>Change in Applicant/Co-Applicant/Guarantor</fullName>
            </value>
            <value>
                <fullName>Wrong Data Entry</fullName>
            </value>
            <value>
                <fullName>Customer not Interested</fullName>
            </value>
            <value>
                <fullName>Cancellation due to high ROI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>