force-app/main/default/objects/Loan_Application__c/fields/BL_CPC__c.field-meta.xml
<CustomField>
    <fullName>BL_CPC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CPC</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CPC</relationshipName>
    <type>Lookup</type>
</CustomField>