force-app/main/default/objects/Loan_Application__c/fields/BL_CSO__c.field-meta.xml
<CustomField>
    <fullName>BL_CSO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CSO</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CSO</relationshipName>
    <type>Lookup</type>
</CustomField>