force-app/main/default/objects/Loan_Application__c/fields/BL_GST_Number__c.field-meta.xml
<CustomField>
    <fullName>BL_GST_Number__c</fullName>
    <label>GST Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>