force-app/main/default/objects/Loan_Application__c/fields/BL_IEC_Importer_Exporter_Code__c.field-meta.xml
<CustomField>
    <fullName>BL_IEC_Importer_Exporter_Code__c</fullName>
    <label>IEC(Importer Exporter Code)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>