force-app/main/default/objects/Loan_Application__c/fields/BL_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>BL_Lead_Source__c</fullName>
    <formula>TEXT(Lead__r.Lead_Source__c)</formula>
    <label>Lead Source</label>
    <type>Text</type>
</CustomField>