force-app/main/default/objects/Loan_Application__c/fields/BL_Negotiation_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>BL_Negotiation_Approval_Status__c</fullName>
    <label>Negotiation Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>