force-app/main/default/objects/Loan_Application__c/fields/BL_Open_Query_Exists__c.field-meta.xml
<CustomField>
    <fullName>BL_Open_Query_Exists__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Open Query Exists</label>
    <type>Checkbox</type>
</CustomField>