force-app/main/default/objects/Loan_Application__c/fields/BL_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>BL_Product_Name__c</fullName>
    <formula>TEXT(Lead__r.Product_Category__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>