force-app/main/default/objects/Loan_Application__c/fields/BL_Product_Vertical__c.field-meta.xml
<CustomField>
    <fullName>BL_Product_Vertical__c</fullName>
    <formula>TEXT( Lead__r.Product_Vertical__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Vertical</label>
    <type>Text</type>
</CustomField>