force-app/main/default/objects/Loan_Application__c/fields/BL_Program__c.field-meta.xml
<CustomField>
    <fullName>BL_Program__c</fullName>
    <label>Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Banking Surrogate</fullName>
            </value>
            <value>
                <fullName>GST</fullName>
            </value>
            <value>
                <fullName>Gross Profit Receipts</fullName>
            </value>
            <value>
                <fullName>Cash Profit Margin</fullName>
            </value>
            <value>
                <fullName>Gross Profit Margin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>