force-app/main/default/objects/Loan_Application__c/fields/BL_RCU_Waived__c.field-meta.xml
<CustomField>
    <fullName>BL_RCU_Waived__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RCU Waived?</label>
    <type>Checkbox</type>
</CustomField>