force-app/main/default/objects/Loan_Application__c/fields/BL_Reject_Type__c.field-meta.xml
<CustomField>
    <fullName>BL_Reject_Type__c</fullName>
    <label>Reject Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hard</fullName>
            </value>
            <value>
                <fullName>Soft</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>