force-app/main/default/objects/Loan_Application__c/fields/BL_Soft_Reject_Date__c.field-meta.xml
<CustomField>
    <fullName>BL_Soft_Reject_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Soft Reject Date</label>
    <type>Date</type>
</CustomField>