force-app/main/default/objects/Loan_Application__c/fields/BL_Validity_End_Date__c.field-meta.xml
<CustomField>
    <fullName>BL_Validity_End_Date__c</fullName>
    <label>Validity End Date</label>
    <type>Date</type>
</CustomField>