force-app/main/default/objects/Loan_Application__c/fields/BL_Whether_MSME_unit_is_ZED_rated__c.field-meta.xml
<CustomField>
    <fullName>BL_Whether_MSME_unit_is_ZED_rated__c</fullName>
    <label>Whether MSME unit is ZED rated</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>