force-app/main/default/objects/Loan_Application__c/fields/Cam_Generate__c.field-meta.xml
<CustomField>
    <fullName>Cam_Generate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cam Generate</label>
    <type>Checkbox</type>
</CustomField>