force-app/main/default/objects/Loan_Application__c/fields/Cancel_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Reason__c</fullName>
    <label>Cancel Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Duplicate Lead</fullName>
            </value>
            <value>
                <fullName>Customer withdrawal Application</fullName>
            </value>
            <value>
                <fullName>Change in Applicant, Co- Applicant or Guarantor</fullName>
            </value>
            <value>
                <fullName>Query not resolved in 15 days</fullName>
            </value>
            <value>
                <fullName>Wrong data entry</fullName>
            </value>
            <value>
                <fullName>ID stuck in System</fullName>
            </value>
            <value>
                <fullName>Any other reasons not covered</fullName>
            </value>
            <value>
                <fullName>Poor CIBIL History</fullName>
            </value>
            <value>
                <fullName>ROI Issue</fullName>
            </value>
            <value>
                <fullName>Negative findings during PD</fullName>
            </value>
            <value>
                <fullName>Fast Expansion</fullName>
            </value>
            <value>
                <fullName>False Information given by Borrower</fullName>
            </value>
            <value>
                <fullName>Poor Repayment History</fullName>
            </value>
            <value>
                <fullName>RCU Declined</fullName>
            </value>
            <value>
                <fullName>Third Party Funding</fullName>
            </value>
            <value>
                <fullName>Credit Decline</fullName>
            </value>
            <value>
                <fullName>Political Links</fullName>
            </value>
            <value>
                <fullName>FFR, Expansion &amp; Bouncing Norms</fullName>
            </value>
            <value>
                <fullName>High DPD or OD for Close relative as per defined Group</fullName>
            </value>
            <value>
                <fullName>Other reason</fullName>
            </value>
            <value>
                <fullName>1</fullName>
                <isActive>false</isActive>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
                <isActive>false</isActive>
                <label>2</label>
            </value>
            <value>
                <fullName>3</fullName>
                <isActive>false</isActive>
                <label>3</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>