force-app/main/default/objects/Loan_Application__c/fields/CB_Customer_Category__c.field-meta.xml
<CustomField>
    <fullName>CB_Customer_Category__c</fullName>
    <label>CB Customer Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CB_Customer_Category</valueSetName>
    </valueSet>
</CustomField>