force-app/main/default/objects/Loan_Application__c/fields/CM__c.field-meta.xml
<CustomField>
    <fullName>CM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Loan_Applications2</relationshipName>
    <type>Lookup</type>
</CustomField>