force-app/main/default/objects/Loan_Application__c/fields/CM_Name__c.field-meta.xml
<CustomField>
    <fullName>CM_Name__c</fullName>
    <formula>CM__r.FirstName +&apos; &apos;+ CM__r.MiddleName + &apos; &apos; + CM__r.LastName + &apos;(&apos; + CM__r.UserRole.Name + &apos;)&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CM Name</label>
    <type>Text</type>
</CustomField>