force-app/main/default/objects/Loan_Application__c/fields/CPA__c.field-meta.xml
<CustomField>
    <fullName>CPA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CPA</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Loan_Applications1</relationshipName>
    <type>Lookup</type>
</CustomField>