force-app/main/default/objects/Loan_Application__c/fields/CPA_Name__c.field-meta.xml
<CustomField>
    <fullName>CPA_Name__c</fullName>
    <formula>CPA__r.FirstName +&apos; &apos;+ CPA__r.MiddleName + &apos; &apos; + CPA__r.LastName + &apos;(&apos; + CPA__r.UserRole.Name + &apos;)&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CPA Name</label>
    <type>Text</type>
</CustomField>