force-app/main/default/objects/Loan_Application__c/fields/CPC_Checker__c.field-meta.xml
<CustomField>
    <fullName>CPC_Checker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CPC Checker</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Loan_Applications4</relationshipName>
    <type>Lookup</type>
</CustomField>