force-app/main/default/objects/Loan_Application__c/fields/CPC_Maker__c.field-meta.xml
<CustomField>
    <fullName>CPC_Maker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CPC Maker</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Loan_Applications3</relationshipName>
    <type>Lookup</type>
</CustomField>