force-app/main/default/objects/Loan_Application__c/fields/Decisioning_Comments__c.field-meta.xml
<CustomField>
    <fullName>Decisioning_Comments__c</fullName>
    <label>Decisioning Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>