force-app/main/default/objects/Loan_Application__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <label>Details</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Subsub_category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Loan for Purchase of Agriculture Implements &amp; Machinery (1121)</fullName>
            </value>
            <value>
                <fullName>Loans for Pre &amp; Post Harvest Activities (spraying, weeding, harvesting, sorting, grading, transporting etc.) (1122)</fullName>
            </value>
            <value>
                <fullName>Fisheries (1131)</fullName>
            </value>
            <value>
                <fullName>Dairying (1132)</fullName>
            </value>
            <value>
                <fullName>Poultry (1133)</fullName>
            </value>
            <value>
                <fullName>Animal Husbandry (1134)</fullName>
            </value>
            <value>
                <fullName>Bee Keeping (1135)</fullName>
            </value>
            <value>
                <fullName>Sericulture (1136)</fullName>
            </value>
            <value>
                <fullName>Other Allied Activities (1137)</fullName>
            </value>
            <value>
                <fullName>Loans to farmers against pledge of agriculture product, warehouse receipt (1141)</fullName>
            </value>
            <value>
                <fullName>Loans to distressed farmers (1142)</fullName>
            </value>
            <value>
                <fullName>Loans to small &amp; marginal farmers for purchase of land for agriculture purpose (1143)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>