force-app/main/default/objects/Loan_Application__c/fields/Document_Verification_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Document_Verification_Start_Date__c</fullName>
    <label>Document Verification Start Date</label>
    <type>DateTime</type>
</CustomField>