force-app/main/default/objects/Loan_Application__c/fields/DSA__c.field-meta.xml
<CustomField>
    <fullName>DSA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DSA</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Loan_Applications6</relationshipName>
    <type>Lookup</type>
</CustomField>