force-app/main/default/objects/Loan_Application__c/fields/DSA_Name__c.field-meta.xml
<CustomField>
    <fullName>DSA_Name__c</fullName>
    <formula>DSA__r.FirstName +&apos; &apos;+DSA__r.MiddleName + &apos; &apos; + DSA__r.LastName + &apos;(&apos; + DSA__r.UserRole.Name + &apos;)&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DSA Name</label>
    <type>Text</type>
</CustomField>