force-app/main/default/objects/Loan_Application__c/fields/Duplicate_LAF_Id__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_LAF_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dedupe Application</label>
    <referenceTo>Loan_Application__c</referenceTo>
    <relationshipLabel>Loan Applications</relationshipLabel>
    <relationshipName>Loan_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>