force-app/main/default/objects/Loan_Application__c/fields/Employee_Code__c.field-meta.xml
<CustomField>
    <fullName>Employee_Code__c</fullName>
    <formula>VALUE(Lead__r.Employee_Id__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>