force-app/main/default/objects/Loan_Application__c/fields/End_to_End_TAT__c.field-meta.xml
<CustomField>
    <fullName>End_to_End_TAT__c</fullName>
    <formula>Now() -  Lead__r.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End to End TAT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>