force-app/main/default/objects/Loan_Application__c/fields/Final_Authority__c.field-meta.xml
<CustomField>
    <fullName>Final_Authority__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Final Authority</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Loan_Applications7</relationshipName>
    <type>Lookup</type>
</CustomField>