force-app/main/default/objects/Loan_Application__c/fields/Is_Moratorium_required__c.field-meta.xml
<CustomField>
    <fullName>Is_Moratorium_required__c</fullName>
    <label>Is Moratorium required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>