force-app/main/default/objects/Loan_Application__c/fields/Is_Retrigger_S1__c.field-meta.xml
<CustomField>
    <fullName>Is_Retrigger_S1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Retrigger Score Card</label>
    <type>Checkbox</type>
</CustomField>