force-app/main/default/objects/Loan_Application__c/fields/IsBranchHasCurrentUser__c.field-meta.xml
<CustomField>
    <fullName>IsBranchHasCurrentUser__c</fullName>
    <formula>IF(OR((AND($Profile.Name == &apos;Credit&apos;,NOT(ISPICKVAL(LOB__c, &quot;BL&quot;)))),(AND(ISPICKVAL(LOB__c, &quot;BL&quot;),($Profile.Name == &apos;Credit&apos; || $Profile.Name == &apos;Operations&apos; || $Profile.Name == &apos;RCU&apos;)))),CONTAINS($User.Branch_IDs__c,Branch__r.Id), true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsBranchHasCurrentUser</label>
    <type>Checkbox</type>
</CustomField>