force-app/main/default/objects/Loan_Application__c/fields/IsCurrentUser__c.field-meta.xml
<CustomField>
    <fullName>IsCurrentUser__c</fullName>
    <formula>IF(  CONTAINS( $Profile.Name , &apos;Admin&apos;),true,OwnerId == $User.Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsCurrentUser</label>
    <type>Checkbox</type>
</CustomField>