force-app/main/default/objects/Loan_Application__c/fields/IsReadOnly__c.field-meta.xml
<CustomField>
    <fullName>IsReadOnly__c</fullName>
    <formula>IF(
AND(
(ISPICKVAL(Loan_Application_Status__c, &apos;Inactive&apos;) ||
ISPICKVAL(Loan_Application_Status__c, &apos;Disbursed&apos;) ||
ISPICKVAL(Loan_Application_Status__c, &apos;Closed&apos;) ||
ISPICKVAL(Loan_Application_Status__c, &apos;Cancelled&apos;) ||
ISPICKVAL(Loan_Application_Status__c, &apos;Rejected&apos;) ||
ISPICKVAL(Loan_Application_Status__c, &apos;Approved&apos;) ||
ISPICKVAL(Loan_Application_Status__c, &apos;Revoke&apos;) ||
$User.Id != OwnerId
),
NOT($Setup.Bypass_Validations__c.Bypass_Validation__c),
NOT(
AND(
User_Role__c = &apos;Relationship Manager&apos;,
ISPICKVAL(Loan_Application_Status__c, &apos;Rejected&apos;)
) ||
User_Role__c = &apos;RCU Manager&apos; ||
User_Role__c = &apos;BL RCU Manager&apos;
)
),
true,
false
)</formula>
    <label>Is Read Only</label>
    <type>Checkbox</type>
</CustomField>