force-app/main/default/objects/Loan_Application__c/fields/isSendBackforMoveToNext__c.field-meta.xml
<CustomField>
    <fullName>isSendBackforMoveToNext__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isSendBackforMoveToNext</label>
    <type>Checkbox</type>
</CustomField>