force-app/main/default/objects/Loan_Application__c/fields/isSendBackToDDE__c.field-meta.xml
<CustomField>
    <fullName>isSendBackToDDE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isSendBackToDDE</label>
    <type>Checkbox</type>
</CustomField>