force-app/main/default/objects/Loan_Application__c/fields/Lead_Converter_Code__c.field-meta.xml
<CustomField>
    <fullName>Lead_Converter_Code__c</fullName>
    <formula>Lead__r.BL_Lead_Convertor_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Converter Code</label>
    <type>Text</type>
</CustomField>