force-app/main/default/objects/Loan_Application__c/fields/Loan_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Loan_Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Applicant</label>
    <referenceTo>Loan_Applicant__c</referenceTo>
    <relationshipLabel>Loan Applications</relationshipLabel>
    <relationshipName>Loan_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>