force-app/main/default/objects/Loan_Application__c/fields/Loan_Application_Status__c.field-meta.xml
<CustomField>
    <fullName>Loan_Application_Status__c</fullName>
    <label>Loan Application Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Disbursed</fullName>
            </value>
            <value>
                <fullName>Revoke</fullName>
            </value>
            <value>
                <fullName>Query Raised</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>