force-app/main/default/objects/Loan_Application__c/fields/Loan_Period__c.field-meta.xml
<CustomField>
    <fullName>Loan_Period__c</fullName>
    <label>Loan Tenure (in Months)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>