force-app/main/default/objects/Loan_Application__c/fields/Manager_IDs__c.field-meta.xml
<CustomField>
    <fullName>Manager_IDs__c</fullName>
    <description>This field is used to determine direct &amp; indirect manager Ids to show records.</description>
    <inlineHelpText>USED FOR BACKEND ONLY</inlineHelpText>
    <label>Manager IDs</label>
    <type>TextArea</type>
</CustomField>