force-app/main/default/objects/Loan_Application__c/fields/Product_Count__c.field-meta.xml
<CustomField>
    <fullName>Product_Count__c</fullName>
    <label>Product Count</label>
    <summaryForeignKey>Product__c.Loan_Application__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>