force-app/main/default/objects/Loan_Application__c/fields/PSL_Category__c.field-meta.xml
<CustomField>
    <fullName>PSL_Category__c</fullName>
    <label>PSL Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>PSL_Non_PSL__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Agriculture (1000)</fullName>
            </value>
            <value>
                <fullName>MSME (2000)</fullName>
            </value>
            <value>
                <fullName>Export Credit (3000)</fullName>
                <label>Export Credit (3000</label>
            </value>
            <value>
                <fullName>Education Loans (4000)</fullName>
            </value>
            <value>
                <fullName>Non PSL (9000)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>