force-app/main/default/objects/Loan_Application__c/fields/PSL_Non_PSL__c.field-meta.xml
<CustomField>
    <fullName>PSL_Non_PSL__c</fullName>
    <label>PSL / Non PSL</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non PSL</fullName>
            </value>
            <value>
                <fullName>PSL_Category</fullName>
                <label>PSL Category</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>