force-app/main/default/objects/Loan_Application__c/fields/Reject_Reason__c.field-meta.xml
<CustomField>
    <fullName>Reject_Reason__c</fullName>
    <label>Reject Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Derogatory CIBIL</fullName>
            </value>
            <value>
                <fullName>Policy Norms not met</fullName>
            </value>
            <value>
                <fullName>Customer not Interested</fullName>
            </value>
            <value>
                <fullName>RCU Negative</fullName>
            </value>
            <value>
                <fullName>FI Negative by Agency</fullName>
            </value>
            <value>
                <fullName>Any Other Reasons</fullName>
            </value>
            <value>
                <fullName>System Reject</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>